--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
+table{
+  width: 90vw !important;
+  margin:20px 10px 10px 10px;
+  box-shadow: 0px 5px 20px rgb(160, 65, 95);
+  border-radius: 20px;
+}
+
+.red-color{
+  background-color: red;
+}
+.green-color{
+  background-color:green;
+}
+
+td{
+  padding:1vw;
+  margin:1px;
+ 
+}
+
+.first{
+  background-color: red;
+}
+
+.second{
+  background-color: green;
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+
+
+.navbar {
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
   text-align: center;
+  /* padding: 14px 16px; */
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dropdown .dropbtn {
+ 
+  border: none;
+  outline: none;
+
+  padding: 5px 0px 0px 20px;
+  background-color: inherit;
+  font: inherit;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  z-index: 1;
+}
+
+.dropdown-content .header {
+  background: red;
+  padding: 16px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Create three equal columns that floats next to each other */
+.column {
+ margin:0px 0px 0px 50px;
+  width: 10.33%;
+  padding: 1px;
+  background-color: #ccc;
+  height: 150px;
+}
+
+/* .column a {
+  float: none;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  width:10px;
+} */
+
+.column a:hover {
+  background-color: #ddd;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+html{
+  overflow-x: hidden;
+}
+
+body{
+  overflow: hidden;
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px !important;
+  border-radius: 20px;
+}
+
+.header{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  font-weight: 700;
+  color:coral;
+
 }
